versión en linea

--- a/libro/templates/registration/signup.html
+++ b/libro/templates/registration/signup.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'layout-home.html' %}
 {% block content3 %}
    <main class="container">
     <div class="row">
