--- a/magicamente/static/css/stylepage.css
+++ b/magicamente/static/css/stylepage.css
@@ -20,7 +20,59 @@ font-family: 'Square Peg', cursive;
   font-family: "PT Sans", sans-serif;
   box-sizing: border-box;
   user-select: none;
+  --input-border: #8b8a8b;
+  --input-focus-h: 245;
+  --input-focus-s: 100%;
+  --input-focus-l: 42%;
+  
 }
+
+
+#videofoto{
+  width: 50%;
+  height: auto;
+  z-index: 5;
+  position: absolute;
+}
+p{
+  font-size: 1rem;
+}
+.qs{
+  font-family: 'arial';
+  font-size: 1rem;
+  z-index: 2;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: baseline;
+  align-items: flex-end;
+
+}
+input{
+  z-index: 3;
+  
+  
+  }
+.main-container{ 
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+
+
+}
+.spani{
+  display: flex;
+  flex-direction: row;
+  
+}
+
+#color{
+  position: absolute;
+  margin-top: 5px;
+
+}
+
+
 #preguntascont{
   width:80%
 }
@@ -60,6 +112,7 @@ div.form-label{
 
 label {
   width: auto;
+  padding: 4px;
 }
 
 .container-nav ul {
@@ -90,7 +143,23 @@ section .recuadro {
 
 .portrait {
   margin: 0px;
-  height: 840px;
+  height: 800px
+}
+.full-image{
+  position: relative;
+}
+.input-name{
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 15%;
+  margin-left: 5%;
+}
+
+.fotos{
+  position: absolute;
+  z-index: 5;
 }
 
 p {
@@ -103,6 +172,15 @@ p {
   font-family: "PT Sans", sans-serif;
 }
 
+.amatic2 {
+  font-family: "Amatic SC";
+  width: 100%;
+  
+  padding-top: 20%;
+  text-align: center;
+  font-size: 40px;
+ 
+}
 .amatic {
   font-family: "Amatic SC", cursive;
   width: 100%;
@@ -138,14 +216,16 @@ p {
   text-align: center;
   font-family: "Square peg", cursive;
   font-size: 50px;
+  
 }
 
 .content {
   display: flex;
   flex-direction: row;
   
+  
   height: 800px;
-  width: 100%;
+  width: 90%;
   font-family: "PT Sans", sans-serif;
   font-weight: 550;
 }
@@ -159,17 +239,18 @@ p {
   -webkit-box-shadow: 4px 3px 5px 4px rgba(150, 150, 150, 1);
   -moz-box-shadow: 4px 3px 5px 4px rgba(150, 150, 150, 1);
   box-shadow: 4px 3px 5px 4px rgba(150, 150, 150, 1);
+
 }
 
 .center {
   position: relative;
-  margin: auto;
+  margin: 5px;
   text-align: center;
 }
 
 .content2 {
   display: flex;
-  margin-right: 3%;
+  margin-left: 0%;
   background: rgb(49, 49, 51);
   background: linear-gradient(
     90deg,
@@ -181,7 +262,7 @@ p {
 .content1 {
   display: flex;
   margin-right: 0px;
-  margin-left: 3%;
+  
   padding-left: 3%;
   background: rgb(255, 255, 231);
   background: linear-gradient(
@@ -194,9 +275,36 @@ p {
 .imgcentral {
   position: absolute;
   opacity: 20%;
-
+  z-index: 0;
   scale: 0.9;
   margin-left: 0%;
+}
+.imgcentral2 {
+  position: absolute;
+  opacity: 80%;
+  z-index: 0;
+  scale: 0.9;
+  margin-left: 0%;
+}
+
+.imgcentral-d {
+
+  position: absolute;
+  opacity: 80%;
+  z-index: 0;
+  scale:0.9;
+  margin-left: -50px;
+  width: 46%;
+  }
+  
+.imgcentral-i {
+
+  position: absolute;
+  opacity: 80%;
+  z-index: 0;
+  scale: 0.9;
+  margin-right: 0;
+  width: 46%;
 }
 
 ol {
@@ -227,6 +335,7 @@ ol {
 
 
 
+
 @media only screen and (max-width: 767px) {
   .portrait {
     margin: 0px;
@@ -245,11 +354,7 @@ ol {
     padding-top: 20%;
     text-align: center;
     font-size: 2 10px;
-    background: linear-gradient(
-      90deg,
-      rgba(142, 142, 148, 0.841) 0%,
-      rgb(255, 255, 5) 5%
-    );
+    
   }
   .siguiente .anterior {
     position: absolute;
@@ -294,6 +399,7 @@ ol {
   .center {
     position: relative;
     margin: auto;
+    height: auto;
     text-align: center;
   }
   .content2 {
@@ -317,6 +423,7 @@ ol {
   .imgcentral {
     position: absolute;
     opacity: 30%;
+    z-index: -2;
 
     scale: 0.5;
     margin-left: 0%;
