--- a/libro/templates/navigatebar.html
+++ b/libro/templates/navigatebar.html
@@ -24,12 +24,12 @@
           <li class="nav-item">
             <a href="/home/" class="nav-link"> Inicio </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a href="#pricing" class="nav-link"> Blog </a>
-          </li>
-          <li class="nav-item">
+          </li> -->
+          <!-- <li class="nav-item">
             <a href="#blog" class="nav-link"> Contacto </a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a href="#docs" class="nav-link"> Acerca de nosotros </a>
           </li>
@@ -37,7 +37,7 @@
           {% if user.is_authenticated %}
           
           <li class="nav-item">
-            <a href="/logout/" class="nav-link"> Logout </a>
+            <a href="/logout/" class="nav-link"> Cerrar sesión </a>
           </li>
           {% else %}
           <li class="nav-item">
